--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -27,8 +27,8 @@
 
                     <div class="row  mt-1 mb-2">
                         <div class="col-3  mb-3">
-                        {{'Enviroment'|trans}}:
-                            {{ form_widget(form.enviroment) }}
+                        {{'Environment'|trans}}:
+                            {{ form_widget(form.environment) }}
                         </div>
                         <div class="col-3">
                             {{'Affects versions'|trans}}:
@@ -49,7 +49,7 @@
                         </div>
 
                         <div class="float-end">
-                            <button id="{{form.save.vars.id}}" name="{{form.save.vars.name}}" class="btn  btn-primary btn-block" type="submit" href="main.html">{{'Submit'|trans}}</button>
+                            <button id="bug_save" name="save" class="btn  btn-primary btn-block" type="submit" href="main.html">{{'Submit'|trans}}</button>
                         </div>
                     </div>
 
