--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+	<link href="{{ asset('css/base.css') }}" rel="stylesheet">
     
     <title>BugTracker</title>
 
@@ -22,6 +23,15 @@
         {% endblock %}
 
     <body>
+       
+        {% for label, messages in app.flashes %}
+            <div id="flashes" class="flash-{{label}}">
+            {% for message in messages %}
+                {{ message }}
+            {% endfor %}
+            </div>
+        {% endfor %}
+
         {% block body %}{% endblock %}
     </body>
 
